<resources>
    <string name="app_name">BookStore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_name">Username</string>
    <string name="email">ducdiep2k@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_other_product">Other school supplies</string>
    <string name="history">Purchase history</string>
    <string name="menu_account">Account</string>
    <string name="menu_search">Search for books</string>
    <string name="offer_list_book">Recommended for you</string>
    <string name="new_list">New update</string>
    <string name="hot_list">The hottest books</string>
    <string name="contact">Contact: 0981206317</string>
    <string name="description">Description: </string>
    <string name="similar">Similar books</string>
    <string name="rank_and_comment">Ratings and reviews</string>
    <string name="evaluate">Submit a review</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="page">page</string>
    <string name="numOfEvaluate"> rating</string>
    <string name="search">Search</string>
    <string name="your_evaluate">You have rated this book </string>
    <string name="star"> star</string>
    <string name="add_to_cart_sucess">Add to cart successfully</string>
    <string name="buy">Order</string>
    <string name="nothing">Your shopping cart is empty</string>
    <string name="buy_success"> Payment successful </string>
    <string name="delete_item_request"> Are you sure you want to remove this item from the cart? </string>
    <string name="confirm">Confirm</string>
    <string name="tutorial"> Hold on to the item to remove it from the cart </string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="evaluate_eror"> An error occurred during evaluation, please try again later! </string>

    <!--    login-->
    <string name="input_username"> Enter your phone </string>
    <string name="input_password"> Enter password </string>
    <string name="forget_pass"> Forgot password? </string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="newbie"> Don\'t have an account yet? </string>
    <string name = "check_login_fail"> Wrong account name or password </string>
    <string name = "check_null"> Username or password cannot be left blank </string>
    <string name = "check_equal"> Confirm password must be the same </string>
    <string name = "check_sucess_false"> Invalid information </string>
    <string name = "check_sucess_true"> Registered successfully </string>
    <string name = "check_confirm_code"> Please enter your confirmation code </string>
    <string name = "error_evaluate"> There was an error during evaluation, Please try again later </string>    <string name="sign_up"> Register now </string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_now">Sign in now?</string>
    <string name="full_name">Full name: </string>
    <string name="sign_out">Log out</string>
    <string name="email_address">Email Address: </string>
    <string name="phone_number">Phone Number: </string>
    <string name="address">Address: </string>
    <string name="un_login"> You are not logged in yet! </string>
    <string name="delete_history">Delete History</string>
    <string name="login_sucess">Login Sucessfully</string>
    <string name = "sign_up_acc"> Register for an account </string>
    <string name = "confirm_code"> Enter the verification code: </string>
    <string name="select_option_buy">Select a payment method</string>
    <string name="delete_trans">Transaction is canceled</string>
    <string name="delete_success">Delete Sucessfully</string>
    <string name="your_choice">Order successfully \n Payment method: </string>
    <string name="logout_success">Logout Success</string>

    <string-array name="option_buy">
        <item>Payment via MoMo</item>
        <item>Internet banking</item>
        <item>Payment on delivery</item>
    </string-array>
    //internet
    <string name = "check_internet"> No internet connection, please try again! </string>
    //introduce
    <string name="introduce">Introduce</string>
    <string name="phone_introduce">0981206317</string>

</resources>
