<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.bookstore.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
<!--        <action-->
<!--            android:id="@+id/action_HomeFragment_to_SearchFragment"-->
<!--            app:destination="@id/nav_search" />-->
    </fragment>

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.bookstore.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.bookstore.ui.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/nav_other_product"
        android:name="com.example.bookstore.ui.otherproduct.OtherProductFragment"
        android:label="@string/menu_other_product"
        tools:layout="@layout/fragment_other_product" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.bookstore.ui.logout.LogOutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>