<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgr_home"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
       >
        <TextView
            android:textSize="@dimen/_15sdp"
            android:text="@string/un_login"
            android:layout_centerHorizontal="true"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/layout_pic"
            android:background="@drawable/book_nav_header"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="@dimen/_130sdp">
        </RelativeLayout>
        <de.hdodenhof.circleimageview.CircleImageView
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_100sdp"
            android:id="@+id/avatar"
            app:civ_border_width="@dimen/_1sdp"
            app:civ_border_color="#fff"
            android:src="@drawable/android_avatar"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp" />

        <TextView
            android:visibility="gone"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:id="@+id/acc_name"
            android:layout_below="@id/avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/user_name"
            android:textColor="#000"
            android:textSize="@dimen/_15sdp"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:visibility="gone"
            android:layout_marginBottom="@dimen/_10sdp"
            android:id="@+id/layout_email_address"
            android:layout_below="@id/acc_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/_13sdp"
                android:textColor="#000"
                android:text="@string/email_address"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

            </TextView>
            <TextView
                android:textSize="@dimen/_13sdp"
                android:id="@+id/email"
                android:layout_below="@+id/acc_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:paddingLeft="@dimen/_2sdp"
                android:text="@string/email" />
        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:layout_marginBottom="@dimen/_10sdp"
        android:id="@+id/layout_phone"
        android:layout_below="@id/layout_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/_13sdp"
            android:textColor="#000"
            android:text="@string/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

        </TextView>
        <TextView
            android:textSize="@dimen/_13sdp"
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:paddingLeft="@dimen/_2sdp"
            android:text="0981206317" />
    </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/layout_address"
            android:layout_below="@id/layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/_13sdp"
                android:textColor="#000"
                android:text="@string/address"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

            </TextView>
            <TextView
                android:textSize="@dimen/_13sdp"
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:paddingLeft="@dimen/_2sdp"
                android:text="Trường đại học CN Hà Nội" />
        </LinearLayout>
        <Button
            android:id="@+id/btnLoginAndLogout"
            android:background="@drawable/btn_login"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:text="@string/sign_in"
            android:layout_height="wrap_content">

        </Button>
    </RelativeLayout>
</layout>